# agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  credential_provider.py  docker-compose.yml  model_config.py  pyproject.toml
.gitea/workflows/: deploy.yaml
.github/workflows/: build.yaml  gitea-sync-trigger.yaml  local-agent.yaml
alembic/: env.py
alembic/versions/: 1d31ea1f542c_add_os_type_to_devices.py  33ec06183e1b_add_message_status_column.py  5f0a3d1c9b2e_add_message_parts_column.py  676e20836e07_add_devices_table.py  732533652f17_initial_schema.py
docs/: integration.md
gitea_agent/: agent.py  client.py
gitea_agent/tools/: __init__.py  admin.py  issue.py  miscellaneous.py  notification.py  organization.py  package.py  repository.py  settings.py  setup.py  user.py
local_agent/: README.md  package-lock.json  package.json
local_agent/src/: app.tsx  auth.ts  cli.tsx  config.ts  connection.ts  daemon.ts  tools.ts  update.ts
local_agent/src/i18n/: en.ts  index.ts  zh-CN.ts
root_agent/: __init__.py  _cli.py  agent.py  callbacks.py  global_tools.py
root_agent/agents/forge_tools/: __init__.py  client.py  issue.py  organization.py  pull_request.py  repository.py  user.py
root_agent/agents/gitea_agent/: __init__.py  agent.py  client.py
root_agent/agents/gitea_agent/tools/: admin.py  issue.py  miscellaneous.py  notification.py  organization.py  package.py  repository.py  settings.py  setup.py  user.py
root_agent/agents/image_agent/: agent.py
root_agent/agents/image_agent/tools/: __init__.py  processing.py  vision.py
root_agent/agents/misskey_agent/: agent.py  client.py
root_agent/agents/misskey_agent/tools/: __init__.py  drive.py  note.py  notification.py  reaction.py  setup.py  user.py
root_agent/agents/push_agent/: __init__.py  agent.py  tools.py
root_agent/agents/push_agent/adapters/: __init__.py  feishu.py  gotify.py  onebot.py  smtp.py  wecom.py
root_agent/agents/search_agent/: agent.py
root_agent/agents/search_agent/tools/: __init__.py  fetch.py  search.py
root_agent/tools/: __init__.py  conversation.py  datetime_tools.py  interaction.py  local_agent.py  memory.py  user_info.py  user_mcp.py
server/: config.py  database.py  deps.py  main.py
server/models/: __init__.py  access_list.py  api_token.py  chat_session.py  device.py  message.py  oauth_provider.py  quota_plan.py  usage_record.py  user.py  user_config.py
server/routers/: admin.py  auth.py  chat.py  device_auth.py  local_agent.py  usage.py  user_config.py
server/schemas/: admin.py  auth.py  chat.py  usage.py  user_config.py
server/services/: admin.py  auth.py  chat.py  title_gen.py  usage.py  user_config.py
todo/: collaborative-mode.md  forge-abstraction-and-dynamic-agents.md  对接平台工作.md
web/: .env.production  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ProtectedRoute.tsx
web/src/components/chat/: ChatArea.tsx  ChatInput.tsx  CodeBlock.tsx  ConfirmationBanner.tsx  MessageBubble.tsx  Sidebar.tsx  ThemeToggle.tsx  ToolCallCard.tsx
web/src/components/ui/: avatar.tsx  badge.tsx  confirm-dialog.tsx  dialog.tsx  scroll-area.tsx  sheet.tsx
web/src/hooks/: useAuth.tsx  useChat.ts  useTitle.ts
web/src/lib/: api.ts  constants.ts  i18n.ts
web/src/locales/en/: admin.json  auth.json  chat.json  common.json  settings.json
web/src/locales/ja/: admin.json  auth.json  chat.json  common.json  settings.json
web/src/locales/zh/: admin.json  auth.json  chat.json  common.json  settings.json
web/src/pages/: ChatPage.tsx  CliAuthPage.tsx  DeviceAuthPage.tsx  LoginPage.tsx  PublicSessionPage.tsx  SettingsPage.tsx
web/src/pages/admin/: AdminLayout.tsx  AdminUserSessionsPage.tsx  OAuthPage.tsx  QuotaPage.tsx  UsersPage.tsx
web/src/types/: chat.ts
